# task_manager

./: README.md  andrey.py  app.py  pyproject.toml
todo/: config.py  gigachat.py  models.py  routes.py
todo/static/css/: style.css
todo/static/js/: script.js
todo/templates/todo/: index.html  layout.html
